--- a/client/src/components/NavTop/index.css
+++ b/client/src/components/NavTop/index.css
@@ -28,7 +28,8 @@ i#normal {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.6);
     padding: 5px;
-    margin-left: 70px;
+    margin: 50px 60px 50px 60px;
+    white-space: nowrap;
 }
 
 .active {
