--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -19,6 +19,7 @@
 .banner {
     background-color: var(--clr-bg);
     height: 10vw;
+    margin-top: 20px;
 }
 
 .banner > h1 {
@@ -26,6 +27,8 @@
     font-family: var(--ff-primary);
     color: var(--clr-neutral-900);
     text-align: center;
+    padding:50px;
+    font-weight:200;
 }
 
 .productGrid {
@@ -42,6 +45,7 @@
 
 .prodimg > img {
     width: 15vw;
+    border-radius: 15px;
 }
 
 .reviewSection > ul {
