--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -1,92 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Titan+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Titan+One&display=swap");
 
 :root {
-    --ff-primary: 'Titan One', san-serif;
-    --ff-text: 'Montserrat', san-serif;
+  --ff-primary: "Titan One", san-serif;
+  --ff-text: "Montserrat", san-serif;
 
-    --clr-neutral-000: white;
-    --clr-neutral-150: hsl(0, 0%, 98%);
-    --clr-neutral-300: hsl(0, 0%, 90%);
-    --clr-neutral-450: hsl(0, 0%, 70%);
-    --clr-neutral-600: hsl(0, 0%, 50%);
-    --clr-neutral-900: black;
-    --clr-bg: hsl(150, 39%, 71%); /* soft mint green for main background color*/
-    --clr-cta: hsl(208, 55%, 80%); /*soft blue for buttons*/
-    --clr-section-bg: hsl(202, 64%, 79%); /* light blue for sectioned backgrounds */
-    --clr-alert: hsl(274, 76%, 58%); /* striking purple for alert notifs*/
+  --clr-neutral-000: white;
+  --clr-neutral-150: hsl(0, 0%, 98%);
+  --clr-neutral-300: hsl(0, 0%, 90%);
+  --clr-neutral-450: hsl(0, 0%, 70%);
+  --clr-neutral-600: hsl(0, 0%, 50%);
+  --clr-neutral-900: black;
+  --clr-bg: hsl(150, 39%, 71%); /* soft mint green for main background color*/
+  --clr-cta: hsl(208, 55%, 80%); /*soft blue for buttons*/
+  --clr-section-bg: hsl(
+    202,
+    64%,
+    79%
+  ); /* light blue for sectioned backgrounds */
+  --clr-alert: hsl(274, 76%, 58%); /* striking purple for alert notifs*/
 }
 
 .banner {
-    background-color: var(--clr-bg);
-    height: 10vw;
-    margin-top: 20px;
+  background-color: var(--clr-bg);
+  height: 10vw;
+  margin-top: 20px;
 }
 
 .banner > h1 {
-    font-size: 3rem;
-    font-family: var(--ff-primary);
-    color: var(--clr-neutral-900);
-    text-align: center;
-    padding:50px;
-    font-weight:200;
+  font-size: 3rem;
+  font-family: var(--ff-primary);
+  color: var(--clr-neutral-900);
+  text-align: center;
+  padding: 50px;
+  font-weight: 200;
 }
 
 .productGrid {
-    display: grid;
-    grid-template:
+  display: grid;
+  margin-inline: auto;
+  /* grid-template:
     "1 2"
-    "3 4";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 1rem;
-    padding: 1rem;
+    "1 4"
+    "3 4"; */
+  grid-template-columns: auto auto ;
+  grid-template-rows: auto auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+  /* margin-left: 20%; */
 }
 
-.prodimg {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
 
 .prodimg > img {
-    width: 20vw;
+  /* width: 20vw; */
+  width: max-content;
+  border-radius: 8px;
+}
+
+.prodimg > caption {
+    font-family: var(--ff-text);
+    font-size: 1.125rem;
+    color: var(--clr-neutral-900);
+    /* width: 10vw; */
 }
 
 #grid1 {
-    grid-area: 1;
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 3;
 }
 
 #grid2 {
-    grid-area: 2;
+  /* grid-area: 2; */
+  grid-column: 4 / span 6;
+  grid-row: 1 / span 2;
 }
 
 #grid3 {
-    grid-area: 3;
+  /* grid-area: 3; */
+  grid-column: 1 / span 4;
+  grid-row: 2 / span 4;
 }
 
 #grid4 {
-    grid-area: 4;
+  /* grid-area: 4; */
+  grid-column: 1 / span 4;
+  grid-row: 2 / span 4;
 }
 
 .reviewSection > ul {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    padding: 1rem;
-background-color: var(--clr-section-bg);
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+  background-color: var(--clr-section-bg);
 }
 
 .review {
-    list-style: none;
-    font-family: var(--ff-text);
-    background-color: var(--clr-neutral-150);
-    border-radius: 5px;
-    width: 30vw;
-    padding: 5px;
-    box-shadow: 5px 5px 5px var(--clr-neutral-600);
+  list-style: none;
+  font-family: var(--ff-text);
+  background-color: var(--clr-neutral-150);
+  border-radius: 5px;
+  width: 30vw;
+  padding: 5px;
+  box-shadow: 5px 5px 5px var(--clr-neutral-600);
 }
 
 .review > span {
-    font-weight: bold;
-    font-size: 20px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+@media (max-width: 992px) {
+  .banner {
+    background-color: var(--clr-bg);
+    height: 20vw;
+    margin-top: 20px;
+  }
+
+  .banner > h1 {
+    font-size: clamp(1rem, 5vw, 3rem);
+  }
+  .productGrid {
+    grid-template:
+      "1"
+      "2"
+      "3"
+      "4";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 1rem;
+    padding: 1rem;
+    margin-left: 0;
+  }
+
+  .prodimg > img {
+    width: 40vw;
+  }
+
+  .review {
+    width: 80vw;
+  }
 }
