--- a/client/src/CSS/Signup.css
+++ b/client/src/CSS/Signup.css
@@ -1,76 +1,60 @@
-.signup-container{
-    text-align: center;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 110px;
-    background-color: #f7f7f7;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+/* Signup.css */
+.RegisterWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f2f5;
+  background-image: url(../assets/SignLogBackground.png);
+  background-size: cover;
+  background-position: center;
 }
 
-h2 {
-    text-align: center;
-    margin-bottom: 15px;
+.RegisterContainer {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.85); /* Semi-transparent white */
+  width: 300px;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
+.RegisterTitle {
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;
 }
 
-label {
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"] {
+.Input {
+  width: 100%;
   padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid #a7c4bc; /* Soft border color */
+  background-color: #e7eff6; /* Very light blue */
 }
 
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus {
-  outline: none;
-  border-color: #a2c6ed;
-}
-
-button {
-    padding: 10px 20px;
-    background-color: #6289b3;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #0f3a68;
-}
-
-.form-buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-input[type="Street"],
-input[type="city"],
-input[type="state"],
-input [type="zipcode"] {
+.RegisterButton, .LoginButton {
+  width: 100%;
   padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 10px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-input[type="street"]:focus,
-input[type="city"]:focus,
-input[type="state"]:focus,
-input[type="zipcode"] {
-  outline: none;
-  border-color: #a2c6ed;
+.RegisterButton {
+  background-color: #9caee0; /* Soft pink */
+  color: #000000; /* Dark grey for contrast */
+}
+
+.LoginButton {
+  background-color: #b8e0f2; /* Soft blue */
+  color: #000000;
+}
+
+/* If you have or add error messages styling */
+.ErrorMessage {
+  color: #f7786b; /* Slightly bolder pink for visibility */
+  margin-bottom: 10px;
 }
