--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -50,6 +50,7 @@
 
 .prodimg > img {
     width: 20vw;
+    border-radius: 10px;
 }
 
 #grid1 {
@@ -89,4 +90,16 @@ background-color: var(--clr-section-bg);
 .review > span {
     font-weight: bold;
     font-size: 20px;
+}
+
+button {
+    background-color: rgb(133, 215, 245) ;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    font-size: 15px;
+    margin-right: -50px;
+    margin-top: 30px;
 }
